# evm-exec

./: .clang-format  .gitmodules  CMakeLists.txt  main.cpp
data/smartcontracts/: hello.sol
